--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,10 +1,11 @@
-.container {
-/*
-  width: 1240px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-*/
-  margin: auto;
-  background-color: rgba(19, 19, 22, 1);
+.mainContainer {
+  width: 100%;
+  max-width: 1920px;
+  margin-top: 40px;
+  display: grid;
+  gap: 40px;
+  grid-template-areas: 
+  'header header'
+  'ingredients constructor';
+  grid-template-columns: repeat(2, 1fr);
 }
