--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -9,3 +9,11 @@
   'ingredients constructor';
   grid-template-columns: repeat(2, 1fr);
 }
+
+.mainWrapper {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+}
