--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -14,19 +14,23 @@
   gap: 40px;
 }
 
+/* вынесли в отд. компонент
 .topOrderElement {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   gap: 16px;
 }
+*/
 
+/* вынесли в отд. компонент
 .middleOrderElement {
   padding-left: 0;
   display: flex;
   align-items: center;
   gap: 8px;
 }
+*/
 
 .priceContainer {
   display: flex;
@@ -35,7 +39,7 @@
 }
 
 /* Для начинок включаем вертикальную прокрутку */
-.stuff {
+.fill {
   max-height: 40vh;
   display: flex;
   flex-direction: column;
@@ -45,14 +49,14 @@
 
 /* Кастом скролбар: https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
 
-.stuff::-webkit-scrollbar {
+.fill::-webkit-scrollbar {
   width: 8px;
 }
 
-.stuff::-webkit-scrollbar-track {
+.fill::-webkit-scrollbar-track {
   background: #2f2f37;
 }
 
-.stuff::-webkit-scrollbar-thumb {
+.fill::-webkit-scrollbar-thumb {
   background: #8585ad;
 }
