--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,25 +1,17 @@
 .mainContainer {
   width: 100%;
-  max-width: 1920px;
-  margin-top: 40px;
-  display: grid;
-  gap: 40px;
-  grid-template-areas: 
-  'header header'
-  'ingredients constructor';
-  grid-template-columns: repeat(2, 1fr);
 }
 
+.mainContent {
+  max-width: 1240px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+/*
 .mainWrapper {
   width: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
-}
-
-.mainContainer {
-  width: 100%;
   max-width: 1920px;
   margin-top: 40px;
   display: grid;
@@ -30,4 +22,27 @@
   grid-template-columns: repeat(2, 1fr);
 }
 
-/* @media screen and (max-width: 768px) {} */
+// Кастом скролбар: https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp //
+
+.fill::-webkit-scrollbar {
+  width: 8px;
+}
+
+.fill::-webkit-scrollbar-track {
+  background: #2f2f37;
+}
+
+.fill::-webkit-scrollbar-thumb {
+  background: #8585ad;
+}
+
+//  Добавить адаптив детям   //
+@media screen and (max-width: 1200px) {
+  .mainContainer {
+    width: 100%;
+    margin-top: 40px;
+    display: flex;
+    flex-direction: columnn;
+  }
+}
+*/
