--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,41 +1,64 @@
 .mainContainer {
-  grid-area: header;
   width: 100%;
-  background: #1c1c1c;
+  max-height: 90px;
+  background-color: #1c1c1c;
 }
 
 .navbar {
-  max-width: 1280px;
+  max-width: 1480px;
+  max-height: 60px;
   margin: 0 auto;
-  padding: 16px 0;
-  display: grid;
-  grid-template-columns: 1fr max-content 1fr;
-  align-items: center;
-  list-style: none;
 }
 
 .navContainer {
+  margin: 0;
   padding: 0;
-  display: flex;
+  display: grid;
   gap: 8px;
+  grid-template-columns: 1fr 1fr max-content 1fr;
+  align-items: center;
   list-style: none;
+/*
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+*/  
 }
 
 .link {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
   color: inherit;
   text-decoration: none;
 }
 
 .navItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+
+  color: inherit;
+  text-decoration: none;
+}
+
+.navItem_logo {
+  margin: 0 auto;
+  padding: 0;
+}
+
+/*
   padding: 16px 20px;
   display: flex;
   gap: 8px;
+
 }
 
 .navItem:last-child {
   justify-self: end;
 }
-
-.navItem_type_logo {
-  padding: 0;
-}
+*/
