--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -1,8 +1,8 @@
 .mainContainer {
-  grid-area: constructor;
+  width: 100%;
   max-width: 600px;
-  margin: 60px 0 0 0;
-  padding: 0 8px 0 16px;
+  max-height: 45vh;
+  overflow-x: hidden;
   justify-self: start;
 }
 
@@ -14,28 +14,46 @@
   gap: 40px;
 }
 
-/* вынесли в отд. компонент
+/* вынести в отд. компонент */
 .topOrderElement {
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  justify-content: flex-end;
   gap: 16px;
+  grid-template-columns: 1fr;
 }
-*/
 
-/* вынесли в отд. компонент
+/* вынесли в отд. компонент */
 .middleOrderElement {
   padding-left: 0;
   display: flex;
   align-items: center;
   gap: 8px;
 }
-*/
+
+.bottomOrderElements {
+  width: 100%;
+  display: grid;
+  gap: 13px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  grid-template-columns: min-content 1fr;
+}
 
 .priceContainer {
   display: flex;
-  gap: 8px;
+  justify-content: flex-end;
   align-items: center;
+}
+
+.orderButton {
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-end;
+  grid-template-columns: 1fr;
 }
 
 /* Для начинок включаем вертикальную прокрутку */
