--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,4 +1,18 @@
 .mainContainer {
+  margin-right: calc((100vw - 1320px)/2);
+  margin-left: calc((100vw - 1320px)/2);
+  display: flex;
+}
+
+/*
+.loading {
+  padding-top: 40px;
+  grid-area: loading;
+  justify-self: center;
+}
+
+/*
+.mainContainer {
   width: 100%;
 }
 
@@ -9,7 +23,7 @@
   justify-content: space-between;
 }
 
-/*
+
 .mainWrapper {
   width: 100%;
   max-width: 1920px;
