--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,64 +1,32 @@
-.mainContainer {
-  width: 100%;
-  max-height: 90px;
-  background-color: #1c1c1c;
+.header {
+  padding-left: calc((100vw - 1320px)/2);
+  padding-right: calc((100vw - 1320px)/2);
+  background-color: var(--color-header);
 }
-
+  
 .navbar {
-  max-width: 1480px;
-  max-height: 60px;
-  margin: 0 auto;
-}
-
-.navContainer {
-  margin: 0;
-  padding: 0;
-  display: grid;
-  gap: 8px;
-  grid-template-columns: 1fr 1fr max-content 1fr;
-  align-items: center;
-  list-style: none;
-/*
-  display: flex;
+  display: flex;  
   flex-direction: row;
-  justify-content: space-between;
-*/  
-}
-
-.link {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  justify-items: center;
   align-items: center;
-  list-style: none;
-  color: inherit;
-  text-decoration: none;
 }
 
-.navItem {
-  display: flex;
+.navitem {
+  display: flex;  
   flex-direction: row;
-  justify-content: center;
   align-items: center;
-  list-style: none;
-
-  color: inherit;
-  text-decoration: none;
+  justify-items: center;
 }
 
-.navItem_logo {
-  margin: 0 auto;
-  padding: 0;
+.navitem:active {
+  color: #fff;
 }
 
-/*
-  padding: 16px 20px;
-  display: flex;
-  gap: 8px;
-
+.navitem:first-child {
+  color: #fff;
 }
 
-.navItem:last-child {
-  justify-self: end;
+.logo {
+  height: 40px;
+  margin: 8px 289px 8px 112px;
 }
-*/
