--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -1,80 +1,59 @@
-.mainContainer {
-  width: 100%;
-  max-width: 600px;
-  max-height: 45vh;
-  overflow-x: hidden;
-  justify-self: start;
-}
-
-.orderContainer {
-  padding: 40px 8px 0 0;
-  display: grid;
-  grid-template-columns: 1fr max-content;
-  justify-items: end;
-  gap: 40px;
-}
-
-/* вынести в отд. компонент */
-.topOrderElement {
-  margin-bottom: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-end;
-  gap: 16px;
-  grid-template-columns: 1fr;
-}
-
-/* вынесли в отд. компонент */
-.middleOrderElement {
-  padding-left: 0;
+.container {
   display: flex;
   align-items: center;
+}
+
+.element_width {
+  width: 536px;
+}
+
+.elements {
+  display: grid;
+  gap: 16px;
+}
+
+.element {
+  display: grid;
   gap: 8px;
+  grid-template-columns: auto auto;
+  justify-content: end;
+  align-items: center;
+  }
+
+.element_name {
+  max-width: 240px;
 }
 
-.bottomOrderElements {
-  width: 100%;
+.element_image {
+  max-width: 80px;
+  max-height: 40px;
+}
+
+.constructor_total {
   display: grid;
-  gap: 13px;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  grid-template-columns: min-content 1fr;
-}
-
-.priceContainer {
-  display: flex;
+  grid-template-columns: auto auto;
+  gap: 40px;
   justify-content: flex-end;
-  align-items: center;
 }
 
-.orderButton {
-  margin-top: 10px;
-  display: flex;
-  justify-content: flex-end;
-  grid-template-columns: 1fr;
+.icon_middle{
+  width: 36px;
+  height: 36px;
 }
 
-/* Для начинок включаем вертикальную прокрутку */
-.fill {
-  max-height: 40vh;
-  display: flex;
-  flex-direction: column;
+.elements_middle {
+  max-width: 584px;
+  height: calc(100vh - 604px);
+  display: grid;
   gap: 16px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
-/* Кастом скролбар: https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
-
-.fill::-webkit-scrollbar {
+.elements_middle::-webkit-scrollbar {
   width: 8px;
+  background-color: var(--color-scrollbar);
 }
 
-.fill::-webkit-scrollbar-track {
-  background: #2f2f37;
-}
-
-.fill::-webkit-scrollbar-thumb {
-  background: #8585ad;
+.elements_middle::-webkit-scrollbar-thumb {
+  background-color: var(--color-scrollbar-thumb);
 }
