--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,104 +1,43 @@
-.mainContainer {
-  grid-area: ingredients;
-  max-width: 600px;
-  justify-self: end;
+.ingredients {
+  width: 600px;
 }
 
-.mainTitle {
-  /* padding-bottom: 20px; */
-  text-align: left;
-}
-
-.mainTabsContainer {
+.navbar {
   display: flex;
-}
-
-.ingredientSection {
-  padding: 40px 0 24px 0;
-}
-
-.cardsContainer {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  list-style: none;
-}
-
-.ingredients{
-  max-height: 70vh;
-  overflow-x: hidden;
-  max-width: 600px;
-}
-
-.li {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: flex-end;
+}
+
+.ingredient_type {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.ingredient {
   max-width: 272px;
-}
-
-
-.ingredientName {
-  font-size: 16px;
-  line-height: 24px;
-  min-height: 48px;
-}
-
-
-.ingredientCard {
-  height: 208px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  gap: 8px;
-  box-sizing: border-box;
+  display: grid;
+  gap: 4px;
+  justify-items: center;
   position: relative;
+  cursor: pointer;
 }
 
-.ingredientImage {
-  padding: 0 16px;
-  display: block;
+.ingredient_types {
+  height: calc(100vh - 324px);
+  overflow-y: auto;
 }
 
-.ingredientCost {
-  text-decoration: none;
+.ingredient_types::-webkit-scrollbar {
+  width: 8px;
+  background-color: var(--color-scrollbar);
 }
 
-.ingredientCurrency {
-  text-decoration: none;
+.ingredient_types::-webkit-scrollbar-thumb {
+  background-color: var(--color-scrollbar-thumb);
 }
 
-.ingredientCostContainer {
-  display: flex;
-  gap: 8px;
-}
-
-.ingredientCounter {
+.counter {
   position: absolute;
   top: 0;
   right: 0;
-}
-
-
-/* Для списка ингридиентов включаем вертикальную прокрутку */
-.ingredientsContainer {
-  max-height: 87vh;
-  overflow-y: scroll;
-}
-
-/* Кастом скролбар: https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
-.ingredientsContainer::-webkit-scrollbar {
-  width: 8px;
-}
-
-.ingredientsContainer::-webkit-scrollbar-track {
-  background: #2f2f37;
-}
-
-.ingredientsContainer::-webkit-scrollbar-thumb {
-  background: #8585ad;
 }
