--- a/src/components/ingredient-item/ingredient-item.module.css
+++ b/src/components/ingredient-item/ingredient-item.module.css
@@ -1,3 +1,28 @@
+.ingredient {
+  max-width: 272px;
+  display: grid;
+  justify-items: center;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 4px;
+  position: relative;
+  cursor: pointer;
+}
+
+
+.counter {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.name {
+  text-decoration: none;
+  align-content: center;
+}
+
+/*
 .card {
   height: 208px;
   display: flex;
@@ -36,3 +61,4 @@
   top: 0;
   right: 0;
 }
+*/
