--- a/src/components/ingredient-nutrition/ingredient-nutrition.module.css
+++ b/src/components/ingredient-nutrition/ingredient-nutrition.module.css
@@ -4,20 +4,22 @@
   align-items: center;
 }
 
-.general {
+/*
+.ingredient_general {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.image {
+.ingredient_image {
   width: 520px;
   height: 240px;
 }
 
-.details {
+.ingredient_details {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   column-gap: 20px;
   justify-items: center;
 }
+*/
