--- a/src/components/modal-overlay/modal-overlay.module.css
+++ b/src/components/modal-overlay/modal-overlay.module.css
@@ -1,22 +1,9 @@
-.mainContainer {
-  width: 100%;
-  height: 100%;
+.container {
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: 1;
-  visibility: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  opacity: 0;
-  transition: visibility 0.5s, opacity 0.5s linear;
-  cursor: pointer;
-}
-
-.mainContainerOpened {
-  visibility: visible;
-  opacity: 1;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, .6);
 }
