--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -14,6 +14,7 @@
 .navitem {
   display: flex;  
   flex-direction: row;
+  white-space: nowrap;
   align-items: center;
   justify-items: center;
 }
