--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -10,6 +10,7 @@
 
 .elementShrink {
   width: 536px;
+  height: 95%;
 }
 
 
@@ -38,8 +39,8 @@
 }
 
 .icon_midstuff{
-  width: 36px;
-  height: 36px;
+  max-width: 36px;
+  max-height: 36px;
 }
 
 .elements_midstuff {
