--- a/src/components/constructor-elements/constructor-elements.module.css
+++ b/src/components/constructor-elements/constructor-elements.module.css
@@ -2,7 +2,7 @@
   display: grid;
   gap: 8px;
   grid-template-columns: auto auto;
-  justify-content: end;
+  justify-content: center;
   align-items: center;
   overflow-x: hidden;
 }
@@ -16,6 +16,7 @@
 
 .middleOrderElement {
   padding-left: 0;
+  contain-intrinsic-height: auto;
   display: flex;
   align-items: center;
   gap: 8px;
