--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -52,9 +52,10 @@
   gap: 10px;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
+  overflow-y: auto;
   scrollbar-color: #8585ad #2f2f37;
 }
-
 
 .element_midstuff::-webkit-scrollbar {
   width: 8px;
