--- a/src/pages/login.module.css
+++ b/src/pages/login.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin-top: calc((100vh - 434px - 148px)/2);
+  margin-top: 180px;
   display: flex;
   flex-direction: column;
   align-items: center;
