Добавил редьюсер авторизации в compose, настроил подсветку активного меню в AppHeader

--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -17,15 +17,18 @@
   white-space: nowrap;
   align-items: center;
   justify-items: center;
+  color: #fff;
 }
 
 .navitem:active {
   color: #fff;
 }
 
+
 .navitem:first-child {
   color: #fff;
 }
+
 
 .logo {
   height: 40px;
