--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -67,6 +67,11 @@
   background-color: #8585ad;
 }
 
+.containerTotal {
+  display: flex;
+  align-items: center;
+}
+
 .total {
   margin-right: 32px;
   padding: 0;
