--- a/src/pages/order.module.css
+++ b/src/pages/order.module.css
@@ -8,6 +8,14 @@
   justify-content: center;
 }
 
+.profile__container {
+  margin-top: 120px;
+  padding-left: calc((100vw - 1320px)/2);
+  padding-right: calc((100vw - 1320px)/2);
+  display: flex;
+  flex-direction: row;
+}
+
 /* grid-контейнер с информацией о заказах и верт. скроллом */
 .order_container {
   max-height: calc(100vh - 208px);
