Мелкие правки по стилям, начал добавлять preloader

--- a/src/pages/feed.module.css
+++ b/src/pages/feed.module.css
@@ -51,3 +51,12 @@
 .order_ready {
   color: #00cccc;
 }
+
+@media screen and (max-width: 1024px) {
+  .order_container {
+    display: flex;
+    flex-direction:column-reverse;
+    align-items: center;
+    gap: 40px;
+  }
+}
