--- a/src/pages/profile.module.css
+++ b/src/pages/profile.module.css
@@ -29,3 +29,10 @@
   text-align: start;
   padding: 17px 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .profile__container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
